<resources>
    <string name="app_name">DaggerMvvmUnitTestPlayground</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="currency_converter">Currency Converter</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="convert">Convert</string>
    <string-array name="currency_codes">
        <item>AED</item>
        <item>AFN</item>
        <item>ALL</item>
        <item>AMD</item>
        <item>ANG</item>
        <item>AOA</item>
        <item>ARS</item>
        <item>CDF</item>
        <item>CAD</item>
        <item>EUR</item>
        <item>HKD</item>
        <item>ISK</item>
        <item>PHP</item>
        <item>DKK</item>
        <item>HUF</item>
        <item>CZK</item>
        <item>AUD</item>
        <item>AZN</item>
        <item>BAM</item>
        <item>BBD</item>
        <item>BDT</item>
        <item>AWG</item>
        <item>RON</item>
        <item>SEK</item>
        <item>IDR</item>
        <item>INR</item>
        <item>BRL</item>
        <item>BSD</item>
        <item>BTC</item>
        <item>BTN</item>
        <item>BWP</item>
        <item>BYN</item>
        <item>BYR</item>
        <item>BZD</item>
        <item>RUB</item>
        <item>HRK</item>
        <item>JPY</item>
        <item>THB</item>
        <item>CHF</item>
        <item>CLF</item>
        <item>CLP</item>
        <item>SGD</item>
        <item>PLN</item>
        <item>BGN</item>
        <item>BHD</item>
        <item>BIF</item>
        <item>BMD</item>
        <item>BND</item>
        <item>BOB</item>
        <item>CNY</item>
        <item>COP</item>
        <item>CRC</item>
        <item>NOK</item>
        <item>NZD</item>
        <item>ZAR</item>
        <item>USD</item>
        <item>MXN</item>
        <item>ILS</item>
        <item>GBP</item>
        <item>KRW</item>
        <item>MYR</item>
    </string-array>
</resources>